goa: Fix password-based authentication

Password-based authentication used for ownCloud/Nextcloud was broken
by GTask port (commit fdda284). GTask is used as user_data for async
callbacks currently, however, user_data is incorrectly cast to MountOp
in this case. Use g_task_get_task_data in order to fix this issue.

https://bugzilla.gnome.org/show_bug.cgi?id=780496